--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "scripts": {
     "build": "npm run clean && babel src --ignore __tests__ --out-dir dist/ && cp package.json dist/ && cp README.md dist/ && flow-copy-source -v src dist",
     "clean": "rimraf dist coverage",
-    "test": "jest --watch",
+    "lint": "eslint src || (printf '\\033[33mTry: \\033[7m npm run lint -- --fix \\033[0m\\n' && exit 1)",
+    "check": "flow check",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "dependencies": {
@@ -31,6 +34,12 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-1": "^6.16.0",
     "enzyme": "^2.5.1",
+    "eslint": "^3.9.1",
+    "eslint-config-react-app": "^0.3.0",
+    "eslint-plugin-flowtype": "^2.25.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.1",
+    "eslint-plugin-react": "^6.6.0",
     "flow-bin": "^0.34.0",
     "flow-copy-source": "^1.1.0",
     "jest": "^17.0.0",
