--- a/.flowconfig
+++ b/.flowconfig
@@ -7,6 +7,7 @@ module.system=haste
 
 esproposal.class_static_fields=enable
 esproposal.class_instance_fields=enable
+esproposal.export_star_as=enable
 
 experimental.strict_type_args=true
 
