--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "dependencies": {
-    "fbjs": "^0.8.5",
+    "fbjs": "^0.8.6",
     "glamor": "^2.17.14",
     "lodash": "^4.16.6"
   },
@@ -26,21 +26,22 @@
     "react-dom": "^15.3.2"
   },
   "devDependencies": {
-    "@kadira/storybook": "^2.29.5",
+    "@kadira/storybook": "^2.29.7",
     "@kadira/storybook-addon-knobs": "^1.5.0",
+    "@kadira/storybook-addons": "^1.6.1",
     "babel-cli": "^6.18.0",
     "babel-eslint": "^7.1.0",
     "babel-preset-env": "^0.0.7",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-1": "^6.16.0",
     "enzyme": "^2.5.1",
-    "eslint": "^3.9.1",
+    "eslint": "^3.10.0",
     "eslint-config-react-app": "^0.3.0",
     "eslint-plugin-flowtype": "^2.25.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.1",
     "eslint-plugin-react": "^6.6.0",
-    "flow-bin": "^0.34.0",
+    "flow-bin": "^0.35.0",
     "flow-copy-source": "^1.1.0",
     "jest": "^17.0.0",
     "react": "^15.3.2",
